added new entries in user profile
