# backend/docs/swagger.json
@@ -363,6 +363,15 @@
                 },
                 "full_name": {
                     "type": "string"
+                },
+                "projects": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "skills": {
+                    "type": "string"
                 }
             }
         },
@@ -387,6 +396,15 @@
                     "type": "string"
                 },
                 "full_name": {
+                    "type": "string"
+                },
+                "projects": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "skills": {
                     "type": "string"
                 },
                 "user_id": {
